[package]
name = "printerfacts"
version = "0.1.0"
authors = ["Christine Dodrill <me@christine.website>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.4"
rand = "0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
